data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_716.wast
;; 7. **Test: Conditional Branching with Operand Stack Manipulations**    - **Description:** Construct a test where `br_if` conditions depend on prior stack manipulations (e.g., pushing and popping values). The conditions should be dynamically evaluated based on current stack state.    - **Constraint:** Ensure that stack manipulations do not affect the correctness of condition evaluations in `br_if`, verifying integral operand stack handling.

(assert_invalid
  (module
    (func $conditional-branch-with-stack
      (i32.const 1)
      (drop)
      (block $label1
        (i32.const 0)
        (br_if $label1 (i32.const 1))
      )
      (i32.const 1)
      (drop)
      (block $label2
        (i32.const 0)
        (br_if $label2 (i32.const 0))
        (drop)
      )
    )
  )
  "type mismatch"
)